--- a/AppHomeMapSpriteKit/Base.lproj/Main.storyboard
+++ b/AppHomeMapSpriteKit/Base.lproj/Main.storyboard
@@ -66,7 +66,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="XXa-Pj-ZHv">
-                        <barButtonItem key="rightBarButtonItem" title="+ Place" id="eSN-BW-S1U">
+                        <barButtonItem key="rightBarButtonItem" title="Add Place" id="eSN-BW-S1U">
                             <connections>
                                 <segue destination="HWZ-qg-imZ" kind="show" id="woe-1q-Q0N"/>
                             </connections>
@@ -78,7 +78,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AYB-Ty-9OB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1612" y="185"/>
+            <point key="canvasLocation" x="1713" y="880"/>
         </scene>
         <!--Device Detail View Controller-->
         <scene sceneID="AyM-gC-Fug">
@@ -157,7 +157,45 @@
             </objects>
             <point key="canvasLocation" x="837.60000000000002" y="951.27436281859082"/>
         </scene>
-        <!--View Controller-->
+        <!--Add Device-->
+        <scene sceneID="2x2-Iz-Iip">
+            <objects>
+                <tableViewController id="XTB-mD-RcY" customClass="AddDeviceViewController" customModule="AppHomeMapSpriteKit" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="UT1-fM-8hx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="accessoryId" id="y2K-Re-O55">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="y2K-Re-O55" id="48G-9V-i10">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Sy-tN-gs4">
+                                            <rect key="frame" x="25" y="12" width="0.0" height="0.0"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="XTB-mD-RcY" id="CHv-Yl-1zs"/>
+                            <outlet property="delegate" destination="XTB-mD-RcY" id="lFW-5j-zR9"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Add Device" id="m7S-W8-86F"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HSZ-nD-0Oq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="94" y="951"/>
+        </scene>
+        <!--Select Place-->
         <scene sceneID="gsD-2U-dDx">
             <objects>
                 <viewController id="HWZ-qg-imZ" customClass="ViewController" customModule="AppHomeMapSpriteKit" customModuleProvider="target" sceneMemberID="viewController">
@@ -166,7 +204,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cf6-Fr-dmj">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -178,18 +216,97 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Ssb-km-Dfx"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Select Place" id="yZB-7i-aw2">
+                        <barButtonItem key="rightBarButtonItem" title="Accept" id="mtd-nn-xyo">
+                            <connections>
+                                <action selector="buttonPressed:" destination="HWZ-qg-imZ" id="x88-Qc-m4P"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="mapView" destination="Cf6-Fr-dmj" id="BvL-w3-e8H"/>
+                        <segue destination="5X1-JM-g5c" kind="show" identifier="showPlaceData" id="DMg-0U-apJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9wL-gd-GzN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2305" y="174"/>
+            <point key="canvasLocation" x="1714" y="185"/>
         </scene>
-        <!--Catalogue Table View Controller-->
+        <!--Place Info-->
+        <scene sceneID="dg5-T0-hgj">
+            <objects>
+                <viewController id="5X1-JM-g5c" customClass="PlaceDetailViewController" customModule="AppHomeMapSpriteKit" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iMD-Jx-eLg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P80-g1-pEi">
+                                <rect key="frame" x="166" y="70" width="55" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GUC-kN-PqR">
+                                <rect key="frame" x="157" y="458" width="72" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gOP-TI-rdt" userLabel="NameLabel">
+                                <rect key="frame" x="16" y="161" width="343" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h9D-EL-ety" userLabel="DescriptionLabel">
+                                <rect key="frame" x="16" y="353" width="343" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5KU-MT-qZR" userLabel="AddressLabel">
+                                <rect key="frame" x="16" y="559" width="343" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Description: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UKq-eA-nhz">
+                                <rect key="frame" x="143" y="265" width="97" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="OgQ-qw-Mcc"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Place Info" id="bFS-ST-ZNv">
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="xUs-zi-aIC">
+                            <connections>
+                                <action selector="buttonPressed:" destination="5X1-JM-g5c" id="VUV-ZE-hRQ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="AddressLabel" destination="5KU-MT-qZR" id="dxg-rd-SEU"/>
+                        <outlet property="DescriptionLabel" destination="h9D-EL-ety" id="XWU-RX-5bQ"/>
+                        <outlet property="NameLabel" destination="gOP-TI-rdt" id="pZR-x7-RMR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fYj-2N-DSC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2543" y="185"/>
+        </scene>
+        <!--addDevice-->
         <scene sceneID="wo2-2W-q2M">
             <objects>
-                <tableViewController storyboardIdentifier="CatalogueTable" id="35D-jg-1XU" customClass="CatalogueTableViewController" customModule="AppHomeMapSpriteKit" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="CatalogueTable" title="addDevice" id="35D-jg-1XU" customClass="CatalogueTableViewController" customModule="AppHomeMapSpriteKit" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="jyf-5p-ljj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -226,14 +343,15 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="2tc-sq-u7D">
-                        <barButtonItem key="rightBarButtonItem" title="+ Place" id="CU6-xV-wSy">
+                        <barButtonItem key="rightBarButtonItem" title="Add Place" id="CU6-xV-wSy">
                             <connections>
-                                <segue destination="rxL-GN-vCL" kind="show" id="8DM-mW-G6w"/>
+                                <segue destination="HWZ-qg-imZ" kind="show" id="Bpv-IP-YDQ"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <segue destination="nAc-Jr-ko7" kind="show" identifier="showDeviceDetail" id="x3c-Dz-sKD"/>
+                        <segue destination="XTB-mD-RcY" kind="show" identifier="addDevice" id="GuS-pN-s5Z"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ROX-gA-TwR" userLabel="First Responder" sceneMemberID="firstResponder"/>
