--- a/AppHomeMapSpriteKit/Base.lproj/Main.storyboard
+++ b/AppHomeMapSpriteKit/Base.lproj/Main.storyboard
@@ -78,7 +78,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AYB-Ty-9OB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1713" y="880"/>
+            <point key="canvasLocation" x="1884" y="868"/>
         </scene>
         <!--Device Detail View Controller-->
         <scene sceneID="AyM-gC-Fug">
@@ -204,7 +204,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cf6-Fr-dmj">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -230,7 +230,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9wL-gd-GzN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1714" y="185"/>
+            <point key="canvasLocation" x="1900" y="83"/>
         </scene>
         <!--Place Info-->
         <scene sceneID="dg5-T0-hgj">
@@ -301,7 +301,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fYj-2N-DSC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2543" y="185"/>
+            <point key="canvasLocation" x="3001" y="185"/>
         </scene>
         <!--addDevice-->
         <scene sceneID="wo2-2W-q2M">
@@ -360,6 +360,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="gaX-oV-tU0"/>
+        <segue reference="Bpv-IP-YDQ"/>
     </inferredMetricsTieBreakers>
 </document>
